Added 'Other Reptile' category

--- a/Plughole/Base.lproj/Main.storyboard
+++ b/Plughole/Base.lproj/Main.storyboard
@@ -235,7 +235,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Ocean" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8zK-tG-myU">
-                                <rect key="frame" x="20" y="210" width="560" height="27"/>
+                                <rect key="frame" x="42" y="210" width="516" height="27"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="27" id="Giq-3D-2ju"/>
                                 </constraints>
@@ -258,20 +258,21 @@
                             <constraint firstItem="qgh-30-K1Y" firstAttribute="leading" secondItem="Ws8-9O-0Wx" secondAttribute="leadingMargin" id="BIb-O7-bar"/>
                             <constraint firstItem="Zsg-z9-9zD" firstAttribute="top" secondItem="hMX-ep-i1y" secondAttribute="bottom" constant="83" id="Cbc-Sq-qH5"/>
                             <constraint firstItem="qgh-30-K1Y" firstAttribute="trailing" secondItem="Ws8-9O-0Wx" secondAttribute="trailingMargin" id="Gnk-s5-EQv"/>
-                            <constraint firstItem="SeG-VA-fr6" firstAttribute="trailing" secondItem="8zK-tG-myU" secondAttribute="trailing" id="H2d-na-UUb"/>
+                            <constraint firstItem="SeG-VA-fr6" firstAttribute="trailing" secondItem="8zK-tG-myU" secondAttribute="trailing" constant="22" id="H2d-na-UUb"/>
                             <constraint firstItem="hMX-ep-i1y" firstAttribute="leading" secondItem="Ws8-9O-0Wx" secondAttribute="leading" constant="20" id="JVT-OV-x33"/>
                             <constraint firstItem="SeG-VA-fr6" firstAttribute="trailing" secondItem="hMX-ep-i1y" secondAttribute="trailing" id="KxI-de-k4t"/>
                             <constraint firstItem="SeG-VA-fr6" firstAttribute="top" secondItem="qgh-30-K1Y" secondAttribute="bottom" constant="16" id="LeY-ZT-8Rb"/>
                             <constraint firstItem="xIg-jm-oXL" firstAttribute="top" secondItem="8zK-tG-myU" secondAttribute="bottom" constant="16" id="ODf-tI-ypH"/>
                             <constraint firstItem="GjM-ku-fGL" firstAttribute="leading" secondItem="Ws8-9O-0Wx" secondAttribute="leading" id="OLm-Kc-2qd"/>
                             <constraint firstItem="SeG-VA-fr6" firstAttribute="leading" secondItem="qgh-30-K1Y" secondAttribute="leading" id="RKA-a6-O4B"/>
-                            <constraint firstItem="SeG-VA-fr6" firstAttribute="leading" secondItem="8zK-tG-myU" secondAttribute="leading" id="VIr-MF-B5g"/>
+                            <constraint firstItem="SeG-VA-fr6" firstAttribute="leading" secondItem="8zK-tG-myU" secondAttribute="leading" constant="-22" id="VIr-MF-B5g"/>
                             <constraint firstItem="8zK-tG-myU" firstAttribute="top" secondItem="Ws8-9O-0Wx" secondAttribute="top" constant="210" id="W6f-UP-4jD"/>
                             <constraint firstAttribute="bottom" secondItem="GjM-ku-fGL" secondAttribute="bottom" id="ZC2-MJ-d1Z"/>
                             <constraint firstItem="Zsg-z9-9zD" firstAttribute="top" secondItem="xIg-jm-oXL" secondAttribute="bottom" constant="271" id="bOj-2X-NDI"/>
-                            <constraint firstItem="8zK-tG-myU" firstAttribute="leading" secondItem="xIg-jm-oXL" secondAttribute="leading" id="bdn-cW-EGL"/>
+                            <constraint firstItem="8zK-tG-myU" firstAttribute="leading" secondItem="xIg-jm-oXL" secondAttribute="leading" constant="22" id="bdn-cW-EGL"/>
                             <constraint firstItem="qgh-30-K1Y" firstAttribute="centerX" secondItem="GjM-ku-fGL" secondAttribute="centerX" id="cHD-ok-Usn"/>
-                            <constraint firstItem="8zK-tG-myU" firstAttribute="trailing" secondItem="xIg-jm-oXL" secondAttribute="trailing" id="fgJ-fn-8p2"/>
+                            <constraint firstItem="8zK-tG-myU" firstAttribute="centerX" secondItem="Ws8-9O-0Wx" secondAttribute="centerX" id="fXV-jX-7WH"/>
+                            <constraint firstItem="8zK-tG-myU" firstAttribute="trailing" secondItem="xIg-jm-oXL" secondAttribute="trailing" constant="-22" id="fgJ-fn-8p2"/>
                             <constraint firstItem="GjM-ku-fGL" firstAttribute="top" secondItem="Ws8-9O-0Wx" secondAttribute="top" id="mJd-5h-hyI"/>
                             <constraint firstItem="hMX-ep-i1y" firstAttribute="top" secondItem="69e-LE-yPX" secondAttribute="bottom" constant="43" id="nRE-aW-XIK"/>
                         </constraints>
